web: fix styles in dark mode for expanding tables

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -137,6 +137,14 @@ select[multiple] {
         --pf-c-table--BorderColor: var(--ak-dark-background-lighter);
         --pf-c-table--cell--Color: var(--ak-dark-foreground);
     }
+    /* class for pagination text */
+    .pf-c-options-menu__toggle {
+        color: var(--ak-dark-foreground);
+    }
+    /* table icon used for expanding rows */
+    .pf-c-table__toggle-icon {
+        color: var(--ak-dark-foreground);
+    }
     /* inputs */
     .pf-c-form-control {
         --pf-c-form-control--BorderTopColor: var(--ak-dark-background-lighter);
